--- a/src/override.css
+++ b/src/override.css
@@ -11,7 +11,7 @@
     background: inherit;
     box-shadow: inset 0 -1px 0 rgba(0,0,0,.125);
 }
-p,span,h3,h2{
+p,span,h3,h2,h1,h4{
     font-family: 'Montserrat';
 }
 input{
