--- a/src/components/cards/examplesCard/ExampleCard.module.scss
+++ b/src/components/cards/examplesCard/ExampleCard.module.scss
@@ -124,6 +124,10 @@ border-radius: 11px;
 margin-bottom: 10px;
 }
 .tumbEl{
+//       padding: 10px;
+
+//   background: #0E0E0E;
+// box-shadow: -1px 4px 21px rgba(0, 0, 0, 0.1);
   margin-bottom: 0 !important;
 }
 .tumbEl:last-child{
