--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -99,6 +99,12 @@
   top: 0;
   right: 0;
 }
+@media (min-width:1000px) {
+  .close svg{
+  max-width:100px !important;
+  max-height: 100px !important;
+}
+}
 
 .desc{
   font-style: normal;
