--- a/src/components/About/mainAbout/MainAbout.module.scss
+++ b/src/components/About/mainAbout/MainAbout.module.scss
@@ -6,9 +6,7 @@
 .sliderWrapp{
 
   display: grid;
-  // grid-template-columns: 3fr 2fr;
-    grid-template-columns: auto;
-
+  grid-template-columns: 3fr 2fr;
   column-gap: 20px;
   align-items:center;
 }
@@ -92,6 +90,7 @@
 .item{
   max-height: 410px;
   width: 100%;
+  border-radius:8px;
 }
 
 
