--- a/src/components/cards/examplesCard/ExampleCardSmall.module.scss
+++ b/src/components/cards/examplesCard/ExampleCardSmall.module.scss
@@ -4,6 +4,8 @@
   max-width: 330px;
   height: 196px;
   width: 100%;
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  border-radius: 11px;
 }
 .img{
   max-height: 152px;
