--- a/src/components/Main/Examples/Examples.module.scss
+++ b/src/components/Main/Examples/Examples.module.scss
@@ -1,15 +1,17 @@
 .wrapper{
+  background: url("../../../assets/images/examplesEllipse.svg")center top/contain no-repeat;
   margin: 0 auto;
   max-width: 1410px;
-  padding: 0 15px;
+  padding: 100px 15px 0;
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 38px;
 }
-@media (max-width:500px) {
-  .rc-pagination-prev, .rc-pagination-next {
-
+@media (max-width:1024px) {
+  .wrapper{
+    background: url("../../../assets/images/examplesEllipseMobile.svg")center top/contain no-repeat;
+    background-size: 100% 100%;
   }
 }
 
