--- a/src/components/Main/Check/Check.module.css
+++ b/src/components/Main/Check/Check.module.css
@@ -115,12 +115,10 @@
 }
 @media screen and (max-width: 990px) {
   .ellipse {
-    display: block;
-    background: url("../../../assets/images/ellipseCenter.svg") center center/contain no-repeat;
-  }
-
-  .carMobile {
     width: 100%;
+    text-align: center;
+    display: block;
+    background: url("../../../assets/images/ellipseCenter2.svg") center center/contain no-repeat;
   }
 
   .desktop {
@@ -128,11 +126,20 @@
   }
 
   .mobile {
-    background: url("../../../assets/images/verticalEllipse.svg") center center/contain no-repeat;
+    background: url("../../../assets/images/tabletEllipse.svg") center center/contain no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+}
+@media screen and (max-width: 650px) {
+  .mobile {
+    background: url("../../../assets/images/verticalEllipse.svg") center center/contain no-repeat;
+  }
+
+  .ellipse {
+    background: url("../../../assets/images/ellipseCenter.svg") center center/contain no-repeat;
   }
 }
 @media screen and (max-width: 576px) {
