--- a/src/components/Main/Check/Check.module.scss
+++ b/src/components/Main/Check/Check.module.scss
@@ -126,25 +126,33 @@
   //}
 
   .ellipse{
+    width: 100%;
+    text-align: center;
     display: block;
-    background: url("../../../assets/images/ellipseCenter.svg")center center/contain no-repeat;
+    background: url("../../../assets/images/ellipseCenter2.svg")center center/contain no-repeat;
   }
   .carMobile{
-    width: 100%;
   }
 
   .desktop{
     display: none;
   }
   .mobile{
-    background: url("../../../assets/images/verticalEllipse.svg")center center/contain no-repeat;
+    background: url("../../../assets/images/tabletEllipse.svg")center center/contain no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 }
-
+@media screen and (max-width: 650px){
+  .mobile{
+    background: url("../../../assets/images/verticalEllipse.svg")center center/contain no-repeat;
+  }
+  .ellipse{
+    background: url("../../../assets/images/ellipseCenter.svg")center center/contain no-repeat;
+  }
+}
 @media screen and (max-width: 576px){
   .title{
     font-size: 32px;
