footer links fixed and whatsapp on desktop was deleted

--- a/src/components/Header/social/Social.module.scss
+++ b/src/components/Header/social/Social.module.scss
@@ -3,3 +3,11 @@
   flex-direction: row;
   gap:8px;
 }
+.whatapp{
+  display: none;
+}
+@media screen and (max-width: 1024px){
+  .whatapp{
+    display: block;
+  }
+}
