--- a/src/components/articleBlock/ArticleBlock.module.css
+++ b/src/components/articleBlock/ArticleBlock.module.css
@@ -68,6 +68,11 @@
   float: right;
 }
 
+.articlePhoto {
+  margin: 0 0 45px 36px;
+  max-width: 100%;
+}
+
 .line {
   max-width: 80%;
   width: 100%;
