--- a/src/components/articleBlock/ArticleBlock.module.scss
+++ b/src/components/articleBlock/ArticleBlock.module.scss
@@ -72,6 +72,10 @@
   margin: 0  0 45px 36px;
   float: right;
 }
+.articlePhoto{
+  margin: 0  0 45px 36px;
+  max-width: 100%;
+}
 
 .line{
   max-width: 80%;
