--- a/src/components/articleBlock/ArticleBlock.module.scss
+++ b/src/components/articleBlock/ArticleBlock.module.scss
@@ -5,7 +5,11 @@
   margin: 0 auto;
   position: relative;
 }
-
+.articleDate{
+  display: block;
+  min-width: 160px;
+  text-align: right;
+}
 
 .contentWrapper{
   max-width: 1110px;
@@ -137,7 +141,14 @@
     flex-direction: column;
     align-items: start;
   }
-
+  .articleDate{
+    display: block;
+    min-width: 160px;
+    text-align: left;
+  }
+  .articlePhoto{
+    margin: 0;
+  }
 }
 
 @media screen and (max-width: 679px){
