--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -72,7 +72,7 @@
     background: var(--header-bcg);
     z-index: 110;
     display: block;
-    padding: 15px 0 5px;
+    padding: 10px 0 10px;
     .container {
       width: 100%;
       padding: 0 15px;
@@ -167,6 +167,10 @@
           margin-left: unset;
         }
         .textContainer {
+          .text{
+            font-weight: 700;
+            font-size: 15px;
+          }
           .link {
             display: none;
           }
