changing title with repeat coming

--- a/src/components/Main/promo/Promo.module.scss
+++ b/src/components/Main/promo/Promo.module.scss
@@ -80,6 +80,9 @@ object-fit: scale-down;
   max-width: 556px;
   width: 100%;
 }
+.mainTitleBlock2 {
+  max-width: 662px;
+}
 .money{
   width: 56px;
 }
