--- a/src/components/Catalog/Main/Main.module.css
+++ b/src/components/Catalog/Main/Main.module.css
@@ -44,8 +44,82 @@
 .promoImg{
     position: absolute;
     display: block;
-    bottom: -150px;
+    bottom: -155px;
     left: 0;
     height: 666px;
     z-index: -1;
+}
+
+/* ADAPTIVE */
+
+@media screen and (max-width: 1200px){
+    .promoImg{
+        height: 550px;
+        bottom: -60px;
+        left: -60px;
+    }
+    .promoWrapper{
+        max-width: 495px;
+    }
+}
+
+@media screen and (max-width: 980px){
+    .catalog{
+        padding: 50px 0 125px;
+    }
+    .promoImg{
+        height: 450px;
+        bottom: -60px;
+        left: -60px;
+    }
+
+}
+
+@media screen and (max-width: 870px){
+    .catalog{
+        padding: 25px 0 100px;
+    }
+    .promoImg{
+        height: 400px;
+        left: -80px;
+    }
+    .promoWrapper{
+        max-width: 395px;
+    }
+}
+
+@media screen and (max-width: 675px){
+    .promoImg{
+        left: -100px;
+    }
+    .promoWrapper{
+        max-width: 325px;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .catalog{
+        padding: 15px 0 390px;
+    }
+    .promoImg{
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .promoWrapper{
+        max-width: none;
+    }
+    .title{
+        font-size: 32px;
+        margin-bottom: 30px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 475px) {
+    .catalog{
+        padding: 15px 0 340px;
+    }
+    .promoImg{
+        height: 332px;
+    }
 }
