--- a/src/pages/euro/MainAbroad/questions.scss
+++ b/src/pages/euro/MainAbroad/questions.scss
@@ -1,5 +1,5 @@
 .questionInner{
-  background-image: url("../../assets/images/squaresBg.svg");
+  background-image: url("../../../assets/images/squaresBg.svg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
