--- a/src/pages/euro/Catalog/Catalog.module.css
+++ b/src/pages/euro/Catalog/Catalog.module.css
@@ -2,7 +2,7 @@
     background: url("../../assets/images/catalog/lightEllipse.svg") center -70px/ contain no-repeat;
 }*/
 .wave{
-    background: url("../../assets/images/waveBgBlack.svg")center top/100% no-repeat;
+    background: url("../../../assets/images/waveBgBlack.svg")center top/100% no-repeat;
     padding-top: 170px;
     overflow: auto;
 }
