--- a/src/pages/rus/Article/Article.module.scss
+++ b/src/pages/rus/Article/Article.module.scss
@@ -14,7 +14,7 @@
 .wave{
   padding-top: 70px;
   margin-top: 70px;
-  background-image: url("../../assets/images/waveBgBlack.svg");
+  background-image: url("../../../assets/images/waveBgBlack.svg");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
