--- a/src/components/Catalog/CatalogCards/CatalogCards.module.css
+++ b/src/components/Catalog/CatalogCards/CatalogCards.module.css
@@ -63,6 +63,7 @@
     max-height: 100%;
     border-radius: 11px;
     position: relative;
+    box-shadow: -1px 4px 21px rgba(0, 0, 0, 0.1);
 }
 
 .catalogItemImg {
