--- a/src/components/FormCalculator/FormCalculator.module.css
+++ b/src/components/FormCalculator/FormCalculator.module.css
@@ -127,4 +127,7 @@ input[type="number"]:focus {
         grid-template-rows: repeat(3, auto);
         row-gap: 27px;
     }
+    .input{
+        padding: 22px 10px 22px 9px;
+    }
 }
